Mostly tweaks in documentations. Added more detail onto README.md

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,10 @@
 
 This program has a dependecy, it uses pygame to play a music file later on in the program.
 So you will need to add this pygame library in python through command prompt, 'pip install pygame'.
-Refer to the link: "https://pypi.org/project/Pygame/"
+
+Refer to the link: "https://pypi.org/project/Pygame/".
+
+....
+
+Other than that, all files can be found in my Github Repository for this project: 
+       https://github.com/btannady/SinnohRegionPokedex
